[TD-786] 자바 testFixtures 빌더 패턴으로 리팩토링